// Copyright 2020 Northern.tech AS
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        http://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.
import React from 'react';
import { Provider } from 'react-redux';

import configureStore from 'redux-mock-store';
import thunk from 'redux-thunk';

import { defaultState, undefineds } from '../../../../../tests/mockData';
import { formRenderWrapper } from '../../common/forms/form.test';
import OrgDataEntry from './orgdata-entry';

const mockStore = configureStore([thunk]);

describe('Login Component', () => {
  it('renders correctly', async () => {
    const store = mockStore({ ...defaultState });
    const { baseElement } = formRenderWrapper(
      <Provider store={store}>
        <OrgDataEntry classes={{ orgData: 'test' }} recaptchaSiteKey="test" />
      </Provider>
    );
    const view = baseElement.getElementsByTagName('div')[0];
    expect(view).toMatchSnapshot();
    expect(view).toEqual(expect.not.stringMatching(undefineds));
  });
});
